crates/carta/tests/snapshots/golden_e2e__ipynb__rst__escaped-line-break-literal.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell markdown
   :name: noesc

   line one\\ line two
