crates/carta/tests/snapshots/golden_e2e__ipynb__rst__markdown-fence-fold.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell markdown

   A code fence whose info string names no language opens no code block;
   it folds into the paragraph, where its delimiters read as an inline
   code span:

   ``python {.foo} code``

   Inside such a fold no later line opens a block of its own:

   ``not a language # still text, not a heading``

   A fence with no closing fence folds the same way:

   \``\` unterminated
