crates/carta/tests/snapshots/golden_e2e__ipynb__rst__metadata.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell markdown
   :name: body

   Document body.
