crates/carta/tests/snapshots/golden_e2e__ipynb__rst__raw-asciidoc.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell raw
   :name: embed

   .. raw:: asciidoc

      [NOTE]
      ====
      admonition body
      ====
