crates/carta/tests/snapshots/golden_e2e__ipynb__rst__raw-mimetype.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell raw
   :name: embed

   .. raw:: latex

      \emph{passed through to the LaTeX writer}
