crates/carta/tests/snapshots/golden_e2e__ipynb__rst__raw.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
.. container:: cell raw
   :name: embed

   .. raw:: html

      <aside class="note">A raw HTML block passed through verbatim.</aside>
